--- a/PROG6212POE/Views/Shared/_Layout.cshtml
+++ b/PROG6212POE/Views/Shared/_Layout.cshtml
@@ -17,9 +17,18 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm box-shadow mb-3 bg-dark" data-bs-theme="dark">
             <div class="container-fluid">
-                <a asp-controller="Home" asp-action="LandingPage" style="font-family:'Cascadia Code'; font-size:20px">
-                    <img src="~/android-chrome-192x192.png" style="width:25px; height:25px" />
-                </a>
+                @if (User.IsInRole("Lecturer") || User.IsInRole("Admin") || User.IsInRole("SuperAdmin"))
+                {
+                    <a asp-controller="Home" asp-action="LandingPage" style="font-family:'Cascadia Code'; font-size:20px">
+                        <img src="~/android-chrome-192x192.png" style="width:25px; height:25px" />
+                    </a>
+                }
+                else
+                {
+                    <a asp-controller="Home" asp-action="StaffLandingPage" style="font-family:'Cascadia Code'; font-size:20px">
+                        <img src="~/android-chrome-192x192.png" style="width:25px; height:25px" />
+                    </a>
+                }
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
